# Raytracer

./: .gitignore  README.md  project_evaluation.md
project/: CMakeLists.txt  Makefile  README.md  main.cpp  scene.json  todo.md
project/include/: camera.hpp  combination.hpp  light.hpp  object.hpp  ray.hpp  texture.hpp  world.hpp
project/markdown/: code_description.md  installation.md
project/markdown/assets/jsons/: header.json  niceOne.json  reflection.json  reflection_vs_refraction.json  refracted.json  spheres.json  square.json  textures.json
project/src/: camera.cpp  combination.cpp  light.cpp  object.cpp  texture.cpp  world.cpp
project/test/: test.py
project/test/inputs/: empty_objects.json  no_medium.json  no_objects.json  no_screen.json  scene.json  wrong_arrays.json
